--- a/typer.html
+++ b/typer.html
@@ -498,7 +498,7 @@ function fontChange() {
   var checkBox = document.getElementById("fontChange");
   var text = document.getElementById("text");
   if (checkBox.checked == true){
-document.getElementById("output_textarea").style.fontFamily = 'Vazir';
+document.getElementById("output_textarea").style.fontFamily = 'Vazirmatn';
 document.getElementById("output_textarea").style.fontSize = '1.6rem';
 document.getElementById("output_textarea").rows = 6;
   } else {
